// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is exec_failed 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949zM8 10v2M8 4l.004 4.5"
          stroke="#F59957"
          stroke-width="1.5"
        />
      </svg>
      <span>
        上线失败
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is exec_scheduled 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#6094FC"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M8 3.155V8l-4.207 2.404a1 1 0 0 0 .377.385L7.5 12.71a1 1 0 0 0 1 0l3.33-1.922a1 1 0 0 0 .5-.866V6.077a1 1 0 0 0-.5-.866L8.5 3.29a1 1 0 0 0-.5-.134"
          fill="#6094FC"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        定时上线
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is exec_succeeded 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#41BF9A"
          stroke-width="1.5"
        />
        <path
          d="m5.083 8 2.084 2.083 4.166-4.166"
          stroke="#41BF9A"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        上线成功
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is executing 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#6094FC"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M8 3.155V8l-4.207 2.404a1 1 0 0 0 .377.385L7.5 12.71a1 1 0 0 0 1 0l3.33-1.922a1 1 0 0 0 .5-.866V6.077a1 1 0 0 0-.5-.866L8.5 3.29a1 1 0 0 0-.5-.134"
          fill="#6094FC"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        正在上线
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is manually_executed 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#41BF9A"
          stroke-width="1.5"
        />
        <path
          d="m5.083 8 2.084 2.083 4.166-4.166"
          stroke="#41BF9A"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        人工上线
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is terminate_failed 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949zM8 10v2M8 4l.004 4.5"
          stroke="#F59957"
          stroke-width="1.5"
        />
      </svg>
      <span>
        中止失败
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is terminate_succeeded 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#41BF9A"
          stroke-width="1.5"
        />
        <path
          d="m5.083 8 2.084 2.083 4.166-4.166"
          stroke="#41BF9A"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
      <span>
        中止成功
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is terminating 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#6094FC"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M8 3.155V8l-4.207 2.404a1 1 0 0 0 .377.385L7.5 12.71a1 1 0 0 0 1 0l3.33-1.922a1 1 0 0 0 .5-.866V6.077a1 1 0 0 0-.5-.866L8.5 3.29a1 1 0 0 0-.5-.134"
          fill="#6094FC"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        正在中止
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is undefined 1`] = `
<body>
  <div>
    <span>
      -
    </span>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is wait_for_audit 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#7453DA"
          stroke-width="1.5"
        />
      </svg>
      <span>
        待审核
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/ExecWorkflow/AuditDetail/InstanceTasksStatus render snap when status is wait_for_execution 1`] = `
<body>
  <div>
    <div
      class="css-3q8fl"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
          stroke="#7470ED"
        />
        <path
          d="M8 3.155V8l4.207 2.404a1 1 0 0 0 .123-.481V6.077a1 1 0 0 0-.5-.866L8.5 3.29a1 1 0 0 0-.5-.134"
          fill="#7470ED"
        />
      </svg>
      <span>
        待上线
      </span>
    </div>
  </div>
</body>
`;
